Change List of users/roles to Set in User/Role entities